<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_gdpr_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/we_care_about_your_privacy_and_data_security_we_keep_this_app_free_by_showing_ads"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/text_gdpr_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_gdpr_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:clickable="true"
        android:text="@string/gdpr_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gdpr_head"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_gdpr_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/can_we_use_your_data_to_tailor_ads_for_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gdpr_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_gdpr_bottom"
        android:text="@string/i_am_at_least_16_years_old" />
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>